[package]
name = "mittorch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
tempfile = "3.10"
ctrlc = "3.4"
libc = "0.2"

# reqwest with rustls (no OpenSSL, fully static)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# git2 built with vendored libgit2, no system libs required
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
